--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+
   "scripts": {
+    "pack": "webpack --config webpack.config.js",
+    "babel": "babel src -d views",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
