--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "pack": "webpack --config webpack.config.js",
     "babel": "babel src -d views",
+    "build": "npm run pack && npm run babel",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
