Whole app suddenly

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "pack": "webpack --config webpack.config.js",
     "babel": "babel src -d views",
     "build": "npm run pack && npm run babel",
